--- a/item/templates/item/stockitem_create.html
+++ b/item/templates/item/stockitem_create.html
@@ -1,13 +1,15 @@
 {% extends "object_create_base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-  Stock Item
+  Stock Items
 {% endblock title %}
 {% block panel_title %}
   Commit Items to Stock
 {% endblock panel_title %}
 {% block create_form %}
   <div class="px-3 pt-3">
+    <span class="text-danger">{{ form.non_field_errors }}</span>
+    {# item search input #}
     <div id="item-input" class="type-search-input">
       <div class="input-group mb-3">
         <span class="input-group-text input-group-text-fw-sm">Item(s)</span>
@@ -23,34 +25,38 @@
         <span class="input-group-text">
           <a href="{% url 'item_create' %}?next={{ request.path }}"
              class="btn btn-sm btn-light"
+             data-bs-toggle="tooltip"
              title="Add a new item">
             <i class="bi bi-plus-circle text-success"></i>
           </a>
         </span>
       </div>
-      {{ form.item.errors }}
+      <span class="text-danger">{{ form.item.errors }}</span>
       <div id="itemSearchResults" class="list-group type-search-result"></div>
       <input type="text" name="item" id="id_item" hidden>
     </div>
+    {# item search input end #}
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Lot Number</span>
       <input type="text"
              name="lot_number"
              id="id_lot_number"
              class="form-control"
+             value="{{ form.lot_number.value|default_if_none:'' }}"
              autocomplete="off"
              placeholder="Lot number or batch number...">
     </div>
-    {{ form.lot_number.errors }}
+    <span class="text-danger">{{ form.lot_number.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Expiry Date</span>
       <input type="date"
              name="expiry_date"
              id="id_expiry_date"
+             value="{{ form.expiry_date.value|default_if_none:'' }}"
              class="form-control"
              placeholder="Expiry Date">
     </div>
-    {{ form.expiry_date.errors }}
+    <span class="text-danger">{{ form.expiry_date.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Delivery
         <a href="javascript:void(0);"
@@ -63,11 +69,13 @@
       </select>
       <span class="input-group-text">
         <a href="{% url 'delivery_create' %}?next={{ request.path }}"
+           data-bs-toggle="tooltip"
+           title="Add a new delivery"
            class="btn btn-sm btn-light">
           <i class="bi bi-plus-circle text-success"></i></a>
       </span>
     </div>
-    {{ form.delivery.errors }}
+    <span class="text-danger">{{ form.delivery.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Quantity</span>
       <input type="number"
@@ -86,7 +94,8 @@
         {% for condition in form.delivery_condition %}{{ condition }}{% endfor %}
       </select>
     </div>
-    {{ form.delivery_condition.errors }}
+    <span class="text-danger">{{ form.delivery_condition.errors }}</span>
+    {# location search input #}
     <div id="location-input" class="type-search-input">
       <div class="input-group mb-3">
         <span class="input-group-text input-group-text-fw-sm">Location</span>
@@ -101,36 +110,44 @@
                hx-target="#locationSearchResults">
         <span class="input-group-text">
           <a href="{% url 'location_create' %}?next={{ request.path }}"
-             class="btn btn-sm btn-light">
-            <i class="bi bi-plus-circle text-success"></i></a>
+             class="btn btn-sm btn-light"
+             data-bs-toggle="tooltip"
+             title="Add a new location">
+            <i class="bi bi-plus-circle text-success"></i>
+          </a>
         </span>
-        <input type="text"
-               name="location"
-               id="id_location"
-               value="{{ form.location.value|default_if_none:'' }}"
-               hidden>
-        <div id="locationSearchResults" class="list-group type-search-result"></div>
       </div>
+      <span class="text-danger">{{ form.location.errors }}</span>
+      <div id="locationSearchResults" class="list-group type-search-result"></div>
+      <input type="text"
+             name="location"
+             id="id_location"
+             value="{{ form.location.value|default_if_none:'' }}"
+             hidden>
     </div>
-    {{ form.location.errors }}
   </div>
 {% endblock create_form %}
 {% block js %}
   <script>
     //set up the search result listener for the item search box
-    TypeSearchResultListenerConfig({
+    const searchConfigurations = [{
       searchBoxId: "item_search_box",
       textInputId: "id_item",
       resultsDivId: "itemSearchResults",
       resultClass: "item-search-result-item",
       valueAttribute: "item-pk"
-    });
-    TypeSearchResultListenerConfig({
+    },
+    {
       searchBoxId: "location_search_box",
       textInputId: "id_location",
       resultsDivId: "locationSearchResults",
       resultClass: "location-search-result-location",
       valueAttribute: "location-pk"
-    });
+    }];
+
+    // Initialize each search box listener
+    searchConfigurations.forEach(
+      config => TypeSearchResultListenerConfig(config)
+    );
   </script>
 {% endblock js %}
