--- a/item/templates/item/stockitem_update.html
+++ b/item/templates/item/stockitem_update.html
@@ -1,10 +1,167 @@
 {% extends "object_update_base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-  Stock Item {% endblock title %}
+  Stock Items
+{% endblock title %}
 {% block panel_title %}
-  Stock Item Update
+  Update Stock Items
 {% endblock panel_title %}
 {% block update_form %}
-  {{ form|crispy }}
+  <div class="px-3 pt-3">
+    <span class="text-danger">{{ form.non_field_errors }}</span>
+    {# item search input #}
+    <div id="item-input" class="type-search-input">
+      <div class="input-group mb-3">
+        <span class="input-group-text input-group-text-fw-sm">Item(s)</span>
+        <input type="text"
+               name="item_query"
+               id="item_search_box"
+               class="form-control"
+               autocomplete="off"
+               value="{{ item_name|default_if_none:'' }}"
+               placeholder="Start typing to enter an item..."
+               hx-trigger="keyup changed delay:500ms"
+               hx-get="{% url 'item_search' %}"
+               hx-target="#itemSearchResults">
+        <span class="input-group-text">
+          <a href="{% url 'item_create' %}?next={{ request.path }}"
+             class="btn btn-sm btn-light"
+             data-bs-toggle="tooltip"
+             title="Add a new item">
+            <i class="bi bi-plus-circle text-success"></i>
+          </a>
+        </span>
+      </div>
+      <span class="text-danger">{{ form.item.errors }}</span>
+      <div id="itemSearchResults" class="list-group type-search-result"></div>
+      <input type="text"
+             name="item"
+             id="id_item"
+             hidden
+             value="{{ form.item.value }}">
+    </div>
+    {# item search input end #}
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">Lot Number</span>
+      <input type="text"
+             name="lot_number"
+             id="id_lot_number"
+             class="form-control"
+             value="{{ form.lot_number.value|default_if_none:'' }}"
+             autocomplete="off"
+             placeholder="Lot number or batch number...">
+    </div>
+    <span class="text-danger">{{ form.lot_number.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">Expiry Date</span>
+      <input type="date"
+             name="expiry_date"
+             id="id_expiry_date"
+             class="form-control"
+             value="{{ form.expiry_date.value|date:'Y-m-d' }}"
+             placeholder="Expiry Date">
+    </div>
+    <span class="text-danger">{{ form.expiry_date.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">Delivery
+        <a href="javascript:void(0);"
+           data-bs-toggle="tooltip"
+           data-bs-placement="top"
+           title="Only +/- 3 days are allowed!"><i class="bi bi-info-circle ps-1"></i></a>
+      </span>
+      <select name="delivery" id="id_delivery" class="form-select">
+        {% for delivery in form.fields.delivery.queryset %}
+          <option value="{{ delivery.pk }}"
+                  {% if delivery.pk == form.delivery.value %}selected{% endif %}>{{ delivery }}</option>
+        {% endfor %}
+      </select>
+      <span class="input-group-text">
+        <a href="{% url 'delivery_create' %}?next={{ request.path }}"
+           data-bs-toggle="tooltip"
+           title="Add a new delivery"
+           class="btn btn-sm btn-light">
+          <i class="bi bi-plus-circle text-success"></i></a>
+      </span>
+    </div>
+    <span class="text-danger">{{ form.delivery.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">Quantity</span>
+      <input type="number"
+             name="quantity"
+             id="id_quantity"
+             min="1"
+             value="1"
+             class="form-control"
+             placeholder="Quantity received...">
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">Condition</span>
+      <select name="delivery_condition"
+              id="id_delivery_condition"
+              class="form-select">
+        {% for condition_id, condition_name in form.fields.delivery_condition.choices %}
+          <option value="{{ condition_id }}"
+                  {% if condition_id == form.delivery_condition.value %}selected{% endif %}>
+            {{ condition_name }}
+          </option>
+        {% endfor %}
+      </select>
+    </div>
+    <span class="text-danger">{{ form.delivery_condition.errors }}</span>
+    {# location search input #}
+    <div id="location-input" class="type-search-input">
+      <div class="input-group mb-3">
+        <span class="input-group-text input-group-text-fw-sm">Location</span>
+        <input type="text"
+               name="location_query"
+               id="location_search_box"
+               class="form-control"
+               autocomplete="off"
+               value="{{ location_name|default_if_none:'' }}"
+               placeholder="Start typing to enter a location..."
+               hx-trigger="keyup changed delay:500ms"
+               hx-get="{% url 'location_search' %}"
+               hx-target="#locationSearchResults">
+        <span class="input-group-text">
+          <a href="{% url 'location_create' %}?next={{ request.path }}"
+             class="btn btn-sm btn-light"
+             data-bs-toggle="tooltip"
+             title="Add a new location">
+            <i class="bi bi-plus-circle text-success"></i>
+          </a>
+        </span>
+      </div>
+      <span class="text-danger">{{ form.location.errors }}</span>
+      <div id="locationSearchResults" class="list-group type-search-result"></div>
+      <input type="text"
+             name="location"
+             id="id_location"
+             value="{{ form.location.value|default_if_none:'' }}"
+             hidden>
+    </div>
+  </div>
 {% endblock update_form %}
+{% block js %}
+  <script>
+  //set up the search result listener for the item search box
+  const searchConfigurations = [{
+    searchBoxId: "item_search_box",
+    textInputId: "id_item",
+    resultsDivId: "itemSearchResults",
+    resultClass: "item-search-result-item",
+    valueAttribute: "item-pk"
+  },
+  {
+    searchBoxId: "location_search_box",
+    textInputId: "id_location",
+    resultsDivId: "locationSearchResults",
+    resultClass: "location-search-result-location",
+    valueAttribute: "location-pk"
+  }];
+
+  // Initialize each search box listener
+  searchConfigurations.forEach(
+    config => TypeSearchResultListenerConfig(config)
+  );
+  </script>
+{% endblock js %}
