delivery create and update and all app icons

--- a/category/templates/category/category_create.html
+++ b/category/templates/category/category_create.html
@@ -3,7 +3,7 @@
   Category Create
 {% endblock title %}
 {% block panel_title %}
-  Add a New Item Category
+<i class="bi bi-bookmarks-fill" style="color: var(--bs-yellow);"></i> New Category
 {% endblock panel_title %}
 {% block create_form %}
   <div class="px-3 pt-3">
