--- a/category/templates/category/category_detail.html
+++ b/category/templates/category/category_detail.html
@@ -3,7 +3,7 @@
   Category - {{ category.name }}
 {% endblock title %}
 {% block panel_title %}
-  {{ category.name }}
+<i class="bi bi-bookmarks-fill" style="color: var(--bs-yellow);"></i> {{ category.name }}
 {% endblock panel_title %}
 {{ category.name }}
 {% block panel_actions %}
