--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -3,7 +3,7 @@
   Categories
 {% endblock title %}
 {% block panel_title %}
-  Categories
+<i class="bi bi-bookmarks-fill" style="color: var(--bs-yellow);"></i>  Categories
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'category_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New category</a>
