--- a/category/templates/category/category_update.html
+++ b/category/templates/category/category_update.html
@@ -4,7 +4,7 @@
   Category
 {% endblock title %}
 {% block panel_title %}
-  Update the Category: {{ object.name }}
+<i class="bi bi-bookmarks-fill" style="color: var(--bs-yellow);"></i>  {{ object.name }}
 {% endblock panel_title %}
 {% block update_form %}
   <div class="px-3 pt-3">
