--- a/company/templates/company/company_create.html
+++ b/company/templates/company/company_create.html
@@ -3,7 +3,7 @@
   Company Create
 {% endblock title %}
 {% block panel_title %}
-  Add a New Company
+<i class="bi bi-buildings" style="color: var(--bs-gray);"></i> New Company
 {% endblock panel_title %}
 {% block create_form %}
   <div class="px-3 pt-3">
