--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -3,7 +3,7 @@
   Company - {{ company.name }}
 {% endblock title %}
 {% block panel_title %}
-  {{ company.name }}
+<i class="bi bi-buildings" style="color: var(--bs-gray);"></i> {{ company.name }}
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
