--- a/item/templates/item/item_create.html
+++ b/item/templates/item/item_create.html
@@ -4,7 +4,7 @@
   Item Create
 {% endblock title %}
 {% block panel_title %}
-  Add a New Item
+  <i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> New Item
 {% endblock panel_title %}
 {% block create_form %}
   <div class="px-3 pt-3">
