--- a/item/templates/item/item_update.html
+++ b/item/templates/item/item_update.html
@@ -4,7 +4,7 @@
   Item Update
 {% endblock title %}
 {% block panel_title %}
-  Update Item: {{ object.name }}
+  <i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> {{ object.name }}
 {% endblock panel_title %}
 {% block update_form %}
   <div class="px-3 pt-3">
