--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -3,7 +3,7 @@
   Location - {{ location.name }}
 {% endblock title %}
 {% block panel_title %}
-  {{ location.name }}
+<i class="bi bi-geo-alt-fill" style="color: var(--bs-red);"></i> {{ location.name }}
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
