--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -3,7 +3,7 @@
   Locations
 {% endblock title %}
 {% block panel_title %}
-  Storage Locations
+<i class="bi bi-geo-alt-fill" style="color: var(--bs-red);"></i> Storage Locations
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'location_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New location</a>
