--- a/templates/object_update_base.html
+++ b/templates/object_update_base.html
@@ -18,7 +18,7 @@
             {% block update_form %}
             {% endblock update_form %}
             <div class="text-end pe-3">
-              <button type="submit" class="btn btn-success">Save</button>
+              <button type="submit" class="btn btn-success"><i class="bi bi-floppy"></i> Save</button>
             </div>
           </form>
         {% endblock panel_content %}
