--- a/item/templates/item/stockitem_detail.html
+++ b/item/templates/item/stockitem_detail.html
@@ -3,7 +3,7 @@
   Stock Item
 {% endblock title %}
 {% block panel_title %}
-  Stock Item Detail
+<i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Stock Item Detail
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
