--- a/location/templates/location/location_update.html
+++ b/location/templates/location/location_update.html
@@ -3,7 +3,7 @@
   Location Update
 {% endblock title %}
 {% block panel_title %}
-  Update the Location: {{ location.name }}
+<i class="bi bi-geo-alt-fill" style="color: var(--bs-red);"></i> {{ location.name }}
 {% endblock panel_title %}
 {% block update_form %}
   <div class="px-3 pt-3">
