--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -12,7 +12,7 @@
         <a href="{% url 'delivery_create' %}" class="dropdown-item"><i class="bi bi-cart-plus-fill" style="color: var(--bs-success);"></i> New Delivery</a>
       </li>
       <li>
-        <a href="{% url 'delivery_list' %}" class="dropdown-item"><i class="bi bi-boxes" style="color: var(--bs-orange);"></i> All Deliveries</a>
+        <a href="{% url 'delivery_list' %}" class="dropdown-item"><i class="bi bi-boxes" style="color: var(--bs-green);"></i> All Deliveries</a>
       </li>
     </ul>
   </li>
@@ -26,7 +26,7 @@
        href="javascript:void(0);"><i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Stock</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-clipboard2-plus" style="color: var(--bs-success);"></i> New Stock</a>
+        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-box-fill" style="color: var(--bs-orange);"></i> New Stock</a>
       </li>
       <li>
         <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes" style="color: var(--bs-orange);"></i> All Stocks</a>
@@ -49,10 +49,10 @@
         <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings" style="color: var(--bs-gray);"></i> Companies</a>
       </li>
       <li>
-        <a href="{% url 'category_list' %}" class="dropdown-item"><i class="bi bi-tags-fill" style="color: var(--bs-yellow);"></i> Categories</a>
+        <a href="{% url 'category_list' %}" class="dropdown-item"><i class="bi bi-bookmarks-fill" style="color: var(--bs-yellow);"></i> Categories</a>
       </li>
       <li>
-        <a href="{% url 'location_list' %}" class="dropdown-item"><i class="bi bi-crosshair" style="color: var(--bs-red);"></i> Locations</a>
+        <a href="{% url 'location_list' %}" class="dropdown-item"><i class="bi bi-geo-alt-fill" style="color: var(--bs-red);"></i> Locations</a>
       </li>
     </ul>
   </li>
