--- a/delivery/templates/delivery/delivery_update.html
+++ b/delivery/templates/delivery/delivery_update.html
@@ -8,6 +8,7 @@
 {% endblock panel_title %}
 {% block update_form %}
   <div class="pt-3 px-3">
+    {{ form.errors }}
     <div id="div_id_delivery_date" class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Delivery Date*:</span>
       <input type="datetime-local"
