--- a/user/templates/user/profile_view.html
+++ b/user/templates/user/profile_view.html
@@ -29,5 +29,21 @@
              value="{{ user.last_name }}"
              disabled>
     </div>
+    <div class="mb-3 input-group">
+      <span class="input-group-text input-group-text-sm">Email:</span>
+      <input type="text"
+             class="form-control bg-white"
+             id="lastName"
+             value="{{ user.email }}"
+             disabled>
+    </div>
+    <div class="mb-3 input-group">
+      <span class="input-group-text input-group-text-sm">Initials:</span>
+      <input type="text"
+             class="form-control bg-white"
+             id="lastName"
+             value="{{ user.initials }}"
+             disabled>
+    </div>
   </div>
 {% endblock panel_content %}
