--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,10 +1,19 @@
 {% extends "user/auth_base.html" %}
-{% load crispy_forms_tags %}
 {% block title %}
   User Login
 {% endblock title %}
+{% block auth_size %}
+  col-xl-3 col-lg-6 col-md-10 col-12
+{% endblock auth_size %}
 {% block auth_form %}
-  {{ form|crispy }}
+  <div id="div_id_username" class="input-group mb-3">
+    <span class="input-group-text input-group-text-fw-sm">{{ form.username.label_tag }}</span>
+    {{ form.username }}
+  </div>
+  <div id="div_id_password" class="input-group mb-3">
+    <span class="input-group-text input-group-text-fw-sm">{{ form.password.label_tag }}</span>
+    {{ form.password }}
+  </div>
 {% endblock auth_form %}
 {% block auth_button %}
   Login
