--- a/user/templates/user/profile_view.html
+++ b/user/templates/user/profile_view.html
@@ -14,33 +14,33 @@
 {% block panel_content %}
   <div class="pt-3 px-3">
     <div class="mb-3 input-group">
-      <span class="input-group-text input-group-text-sm">First Name:</span>
+      <span class="input-group-text input-group-text-fw-sm">First name:</span>
       <input type="text"
-             class="form-control bg-white"
+             class="form-control bg-light"
              id="firstName"
              value="{{ user.first_name }}"
              disabled>
     </div>
     <div class="mb-3 input-group">
-      <span class="input-group-text input-group-text-sm">Last Name:</span>
+      <span class="input-group-text input-group-text-fw-sm">Last name:</span>
       <input type="text"
-             class="form-control bg-white"
+             class="form-control bg-light"
              id="lastName"
              value="{{ user.last_name }}"
              disabled>
     </div>
     <div class="mb-3 input-group">
-      <span class="input-group-text input-group-text-sm">Email:</span>
+      <span class="input-group-text input-group-text-fw-sm">Email address:</span>
       <input type="text"
-             class="form-control bg-white"
+             class="form-control bg-light"
              id="lastName"
              value="{{ user.email }}"
              disabled>
     </div>
     <div class="mb-3 input-group">
-      <span class="input-group-text input-group-text-sm">Initials:</span>
+      <span class="input-group-text input-group-text-fw-sm">Initials:</span>
       <input type="text"
-             class="form-control bg-white"
+             class="form-control bg-light"
              id="lastName"
              value="{{ user.initials }}"
              disabled>
