pre-stock usage model

--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -7,11 +7,11 @@
 {% endblock auth_size %}
 {% block auth_form %}
   <div id="div_id_username" class="input-group mb-3">
-    <span class="input-group-text input-group-text-fw-sm">{{ form.username.label_tag }}</span>
+    <span class="input-group-text">{{ form.username.label_tag }}</span>
     {{ form.username }}
   </div>
   <div id="div_id_password" class="input-group mb-3">
-    <span class="input-group-text input-group-text-fw-sm">{{ form.password.label_tag }}</span>
+    <span class="input-group-text">{{ form.password.label_tag }}</span>
     {{ form.password }}
   </div>
 {% endblock auth_form %}
