--- a/item/templates/item/item_search_results.html
+++ b/item/templates/item/item_search_results.html
@@ -1,3 +1,3 @@
 {% for item in found_items %}
-  <a href="javascript:void(0);" class="list-group-item list-group-item-action item-search-result-item" item-pk={{ item.pk }}>{{ item.name }}</a>
+  <a href="javascript:void(0);" class="list-group-item list-group-item-action item-search-result-item" item-pk={{ item.pk }}>{{ item.name }} [{{ item.product_id }}]</a>
 {% endfor %}
