--- a/item/templates/item/stockitem_delete_form.html
+++ b/item/templates/item/stockitem_delete_form.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'stock_delete' stockitem.pk %}">
+<form method="post" action="{% url 'stock_delete' object.pk %}">
   <div class="modal-header">
     <h5 class="modal-title" id="crudModalLabel">Confirm Deletion</h5>
     <button type="button"
@@ -10,13 +10,13 @@
     {% csrf_token %}
     <p>
       Delete <i class="text-danger fw-bold">
-      {{ stockitem.item.name }}</i> 
-      <small>({{ stockitem.delivery.delivery_date|date:"d.m.y" }} &#x2022; {{ stockitem.lot_number }} &#x2022; #{{ stockitem.ordinal_number }})</small>?
-    </p>
-    <input type="hidden" name="stock_id" value="{{ stockitem.pk }}">
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-danger">Delete</button>
-  </div>
+    {{ object }}</i>
+    <small>(delivered: {{ object.delivery.delivery_date|date:"d.m.y" }})</small>?
+  </p>
+  <input type="hidden" name="stock_id" value="{{ object.pk }}">
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+  <button type="submit" class="btn btn-danger">Delete</button>
+</div>
 </form>
